fix: menu type not defaulting to empty when not provided